fixing the spacing above the lists button on each page

--- a/Challenge2/christmas.css
+++ b/Challenge2/christmas.css
@@ -114,7 +114,7 @@ body{
     float:left;margin:0px;
   }
   .time-content {
-      width: 80%;
+      width: 90%;
       text-align: center;
       /* margin: 0 auto; */
       margin: 35px 70px 50px 90px;
