--- a/Challenge2/individualLists/friends/friends.css
+++ b/Challenge2/individualLists/friends/friends.css
@@ -20,7 +20,7 @@
   .container {
     position: relative;
     margin: 0 auto;
-    top: -15rem;
+    margin-top: -15rem;
     max-width: 900px;
     width: 90%;
     border: 4px solid rgb(32, 88, 10);
